cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8.txt
../dataset/june2020_dataset_copy/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/othello/UIJuego.java:392: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(fichero) $$ java.io.FileReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.IOException $$ ( 12788, 12811 ) $$ @MustCall method close may not have been invoked on new FileReader(fichero) or any of its aliases.
			reader = new BufferedReader(new FileReader(fichero));
			                            ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.IOException
../dataset/june2020_dataset_copy/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Controlador.java:238: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(fichero) $$ java.io.FileReader $$ possible exceptional exit due to new FileReader(fichero) with exception type java.io.FileNotFoundException $$ ( 7999, 8022 ) $$ @MustCall method close may not have been invoked on new FileReader(fichero) or any of its aliases.
			BufferedReader readerPenultimaLinea = new BufferedReader(new FileReader(fichero));
			                                                         ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to new FileReader(fichero) with exception type java.io.FileNotFoundException
../dataset/june2020_dataset_copy/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Controlador.java:239: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(fichero) $$ java.io.FileReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.FileNotFoundException $$ ( 8072, 8095 ) $$ @MustCall method close may not have been invoked on new FileReader(fichero) or any of its aliases.
			BufferedReader reader = new BufferedReader(new FileReader(fichero));
			                                           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.FileNotFoundException
../dataset/june2020_dataset_copy/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/JuegoTorneo.java:158: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(fichero) $$ java.io.FileReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.IOException $$ ( 4779, 4802 ) $$ @MustCall method close may not have been invoked on new FileReader(fichero) or any of its aliases.
			reader = new BufferedReader(new FileReader(fichero));
			                            ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.IOException
../dataset/june2020_dataset_copy/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Torneo.java:118: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(fichero) $$ java.io.FileReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.FileNotFoundException $$ ( 4106, 4129 ) $$ @MustCall method close may not have been invoked on new FileReader(fichero) or any of its aliases.
			BufferedReader reader = new BufferedReader(new FileReader(fichero));
			                                           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.FileNotFoundException
../dataset/june2020_dataset_copy/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/algoritmosGeneticos/Estrategia.java:232: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(fichero) $$ java.io.FileReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.FileNotFoundException $$ ( 10537, 10560 ) $$ @MustCall method close may not have been invoked on new FileReader(fichero) or any of its aliases.
				BufferedReader reader = new BufferedReader(new FileReader(fichero));
				                                           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.FileNotFoundException
../dataset/june2020_dataset_copy/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/algoritmosGeneticos/Estrategia.java:422: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(fichero) $$ java.io.FileReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.FileNotFoundException $$ ( 17988, 18011 ) $$ @MustCall method close may not have been invoked on new FileReader(fichero) or any of its aliases.
			BufferedReader reader = new BufferedReader(new FileReader(fichero));
			                                           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.FileNotFoundException
Note: ../dataset/june2020_dataset_copy/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/othello/UIJuego.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
7 errors
